<resources>
    <string name="app_name">艺虫</string>
    <string name="Loding">努力加载中</string>
    <string name="head">这里是HeadView</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载...</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>
    <string name="header_text">The Header</string>
    <string name="footer_text">The Footer</string>
    <string name="app_pengyouquan">朋友圈</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="viewpager_indicator">%1$d/%2$d</string>
    <string name="default_file_name">My Recording</string>
    <string name="toggle_switch_flash_on">开启录制</string>
    <string name="toggle_switch_flash_off">关闭录制</string>
    <string name="app_camera">切换摄像头</string>
    <string name="live_push">开始推流</string>
    <string name="live_stop">结束推流</string>
    <string name="toggle_switch_beauty_on">美颜开启</string>
    <string name="toggle_switch_beauty_off">美颜关闭</string>
    <string name="no_camera_permission">没有权限使用摄像头，请开启摄像头权限</string>
    <string name="no_record_audio_permission">没有权限使用录音，请开启录音权限</string>
    <string name="VIDEO_CAPTURE_FPS">视频采集帧率（实时帧率）:</string>
    <string name="AUDIO_ENCODER_FPS">音频编码帧率（实时帧率）:</string>
    <string name="VIDEO_ENCODER_FPS">视频编码帧率（实时帧率）:</string>
    <string name="OUTPUT_BITRATE">输出码率（实时码率）:</string>
    <string name="AV_OUTPUT_DIFF">当前输出流，audio pts与video pts的差值:</string>
    <string name="AUDIO_OUTPUT_FPS">音频输出帧率（实时帧率）:</string>
    <string name="VIDEO_OUTPUT_FPS">视频输出帧率（实时帧率）:</string>
    <string name="STREAM_PUBLISH_TIME">推流发布耗时（推流开始到发布流成功耗时）:</string>
    <string name="STREAM_SERVER_IP">推流服务器IP:</string>
    <string name="VIDEO_DELAY_DURATION">视频延迟时长:</string>
    <string name="AUDIO_DELAY_DURATION">音频延迟时长:</string>
    <string name="VIDEO_CACHE_FRAME_CNT">缓冲队列视频帧数:</string>
    <string name="AUDIO_CACHE_FRAME_CNT">缓冲队列音频帧数:</string>
    <string name="VIDEO_CACHE_BYTE_SIZE">缓冲队列视频数据总数:</string>
    <string name="AUDIO_CACHE_BYTE_SIZE">缓冲队列音频数据总数:</string>
    <string name="VIDEO_FRAME_DISCARD_CNT">视频丢弃总帧数:</string>
    <string name="AUDIO_FRAME_DISCARD_CNT">音频丢弃总帧数:</string>
    <string name="CUR_VIDEO_BUEATY_DURATION">当前视频帧美颜耗时:</string>
    <string name="CUR_VIDEO_ENCODER_DURATION">当前视频帧编码耗时:</string>
    <string name="cur_video_encode_bitrate">当前视频编码码率:</string>
    <string name="illegal_output_resolution">选择输出分辨率过大</string>
    <string name="VIDEO_OUTPUT_FRAME_COUNT">获取视频流已发送帧数:</string>
    <string name="VIDEO_DATA">视频流已发送数据量:</string>
    <string name="VIDEO_BUFFER_COUNT">当前手机端缓存的视频帧总数:</string>
    <string name="VIDEO_DROPPED_FRAMECOUNT">当前直播视频流丢帧总数:</string>
    <string name="AUDIO_DATA">音频流已发送数据量:</string>
    <string name="cancle">取消</string>
    <string name="title">请选择时间</string>
    <string name="commit">确定</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="default_desc">将取景框对准码区，即可自动扫描</string>
    <string name="action_photo_desc">相册</string>
    <string name="action_light_on_desc">开灯</string>
    <string name="action_light_off_desc">关灯</string>
    <string name="action_produce_desc">创建二维码</string>
    <string name="label_format">格式:{format}</string>
    <string name="label_meta">元数据:{meta}</string>
    <string name="label_code_value">https://www.google.com</string>
    <string name="label_time">时间:{time}</string>
    <string name="label_type">类型:{type}</string>
    <string name="me_nologin_not_login">您还没有登录哦</string>
    <string name="me_user_cart">购物车</string>
    <string name="me_user_favorite">收藏</string>
    <string name="me_user_history">最近浏览</string>
    <string name="opening_wechat">正在打开微信，请稍后...</string>
    <string name="opening_qq">正在打开QQ，请稍后...</string>
    <string name="opening_blog">正在打开微博，请稍后...</string>
    <string name="title_activity_my">MyActivity</string>
    <string name="dynamic_expression">[动态表情]</string>
    <string name="voice_prefix">[语音]</string>
    <string name="video_call">[视频通话]</string>
    <string name="app_slogon">即时通讯云领导者</string>
    <string name="text_ack_msg">已读</string>
    <string name="text_delivered_msg">送达</string>
    <string name="back">返回</string>
    <string name="save">保存</string>
    <string name="button_pushtotalk">按住说话</string>
    <string name="button_send">发送</string>
    <string name="attach_smile">表情</string>
    <string name="attach_picture">图片</string>
    <string name="attach_take_pic">拍照</string>
    <string name="attach_location">位置</string>
    <string name="attach_video">视频</string>
    <string name="attach_file">文件</string>
    <string name="attach_voice_call">语音电话</string>
    <string name="attach_video_call">视频通话</string>
    <string name="user_card">名片</string>
    <string name="move_up_to_cancel">手指上滑，取消发送</string>
    <string name="release_to_cancel">松开手指，取消发送</string>
    <string name="send_fail">发送消息失败,</string>
    <string name="delete_message">删除消息</string>
    <string name="delete_conversation_messages">删除会话和消息</string>
    <string name="delete_conversation">删除会话</string>
    <string name="copy_message">复制消息</string>
    <string name="delete_voice">删除语音</string>
    <string name="delete_video">删除视频</string>
    <string name="delete">删除</string>
    <string name="resend">重发</string>
    <string name="confirm_resend">确认重发该信息？</string>
    <string name="connect_failuer_toast">请检查网络或稍候重试</string>
    <string name="network_unavailable">网络连接不可用，请检查网络</string>
    <string name="copy">复制</string>
    <string name="forward">转发</string>
    <string name="button_logout">退出登录</string>
    <string name="button_uploadlog">上传运行日志</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="prompt">提示</string>
    <string name="search_contanier">搜索："%s"</string>
    <string name="clear_records">清空记录</string>
    <string name="clear_all_records">是否清空所有聊天记录？</string>
    <string name="location_recv">[%1$s的位置]</string>
    <string name="location_message">位置信息</string>
    <string name="recording_video">录制视频</string>
    <string name="stop_record">停止录制</string>
    <string name="switch_camera">切换摄像头</string>
    <string name="record_finish_toast">录制完毕，文件存储在%s</string>
    <string name="location_prefix">[我的位置]</string>
    <string name="picture">[图片]</string>
    <string name="video">[视频]</string>
    <string name="file">[文件]</string>
    <string name="voice_call">[语音通话]</string>
    <string name="button_cancel">取消</string>
    <string name="button_save">保存</string>
    <string name="button_search">查找</string>
    <string name="button_add">添加</string>
    <string name="search_header">搜</string>
    <string name="network_isnot_available">网络不可用</string>
    <string name="recoding_fail">录音失败，请重试！</string>
    <string name="select_contacts">选择联系人</string>
    <string name="confirm_forward_to">确定转发到：%1$s ?</string>
    <string name="logout">退出登录</string>
    <string name="logout_hint">退出后不会删除任何历史数据，下次登录依然可以使用本账号</string>
    <string name="exit_group_hint">退出后，将不再接收此群聊信息</string>
    <string name="dissolution_group_hint">退出后，此群将被解散</string>
    <string name="exit_group">退出</string>
    <string name="connect_conflict">同一帐号已在其他设备登录</string>
    <string name="em_user_remove">此用户已被移除</string>
    <string name="set">设置</string>
    <string name="notify">新消息提醒</string>
    <string name="newnotify">接收新消息通知</string>
    <string name="voice">声音</string>
    <string name="shake">震动</string>
    <string name="chatset">聊天设置</string>
    <string name="yangshengqi">使用扬声器播放语音</string>
    <string name="book_black">通讯录黑名单</string>
    <string name="session">会话</string>
    <string name="address_book">通讯录</string>
    <string name="setting">设置</string>
    <string name="now_refresh_list">正在加载数据</string>
    <string name="Application_and_notify">申请与通知</string>
    <string name="save_new_nickname">保存</string>
    <string name="nickname_description">设置此昵称以后，在与iOS客户端demo聊天过程中，iOS一侧会显示此昵称而不是环信ID，如果对方使用安卓客户端则此设置不生效</string>
    <string name="group_chat">群聊</string>
    <string name="chat_room">聊天室</string>
    <string name="add_friend">添加好友</string>
    <string name="search">搜索</string>
    <string name="black_item">黑名单</string>
    <string name="diagnose">诊断</string>
    <string name="push_nick">iOS离线推送昵称</string>
    <string name="Current_version">当前版本</string>
    <string name="Not_Set">未设置</string>
    <string name="Upload_the_log">上传日志中</string>
    <string name="The_new_group_chat">新建群组</string>
    <string name="add_public_group_chat">添加公开群</string>
    <string name="add_public_chat_room">添加聊天室</string>
    <string name="group_not_found">找不到这个群组</string>
    <string name="group_name">群聊名称</string>
    <string name="Group_chat_profile">群聊简介</string>
    <string name="Whether_the_public">是否公开</string>
    <string name="Open_group_members_invited">开放群成员邀请</string>
    <string name="Open_group_chat">公开的群聊</string>
    <string name="join_need_owner_approval">加入公开群需要群主同意</string>
    <string name="blacklist">黑名单列表</string>
    <string name="serach_group_message">消息搜索</string>
    <string name="Empty_the_chat_record">清空聊天记录</string>
    <string name="Shielding_of_the_message">屏蔽群消息</string>
    <string name="dismiss_group">解散群聊</string>
    <string name="Select_the_contact">选择联系人</string>
    <string name="Group_chat_information">群聊资料</string>
    <string name="Group_of_Lord">群主</string>
    <string name="Introduction">简介</string>
    <string name="To_join_the_chat">加入群聊</string>
    <string name="login">登录</string>
    <string name="user_name">用户名</string>
    <string name="password">密码</string>
    <string name="register">注册</string>
    <string name="confirmpassword">确认密码</string>
    <string name="downwaiting">正在下载文件请稍后</string>
    <string name="mute">静音</string>
    <string name="Hands_free">免提</string>
    <string name="hang_up">挂断</string>
    <string name="answer">接听</string>
    <string name="unable_to_connect">不能连接到服务器</string>
    <string name="newchat">新建聊天</string>
    <string name="agree">同意</string>
    <string name="refuse">拒绝</string>
    <string name="not_download">未下载:</string>
    <string name="Please_enter_a_username">请输入用户名</string>
    <string name="is_down_please_wait">正在下载视频请稍候</string>
    <string name="Exit_the_group_chat">退出群聊</string>
    <string name="accept_join_group">同意加入群：</string>
    <string name="refuse_join_group">拒绝加入群：</string>
    <string name="not_add_myself">不能添加自己</string>
    <string name="This_user_is_already_your_friend">此用户已是你的好友</string>
    <string name="Add_a_friend">加个好友呗</string>
    <string name="send_successful">发送请求成功,等待对方验证</string>
    <string name="Request_add_buddy_failure">请求添加好友失败:</string>
    <string name="Network_error">网络出错</string>
    <string name="Making_sure_your_location">正在确定你的位置...</string>
    <string name="please_check">key 验证出错! 请在 AndroidManifest.xml 文件中检查 key 设置</string>
    <string name="expression">[表情]</string>
    <string name="Removed_from_the_failure">移出失败</string>
    <string name="be_removing">正在移出...</string>
    <string name="call_duration">通话时长</string>
    <string name="Refused">已拒绝</string>
    <string name="The_other_party_has_refused_to">对方已拒绝</string>
    <string name="The_other_is_not_online">对方不在线</string>
    <string name="The_other_is_on_the_phone">对方正在通话中</string>
    <string name="The_other_party_did_not_answer">对方未接听</string>
    <string name="did_not_answer">未接听</string>
    <string name="Has_been_cancelled">已取消</string>
    <string name="call_version_inconsistent">通话协议版本不一致</string>
</resources>