<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#000">

    <SurfaceView
        android:id="@+id/camera_surface"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>


    <ImageView
        android:id="@+id/picure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:src="@mipmap/fake_members"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:visibility="gone"
        >
        <include layout="@layout/performance_log"/>
    </FrameLayout>

    <com.example.rh.artlive.live.GiftItemView
        android:id="@+id/gift_item_first"
        android:layout_marginBottom="250dp"
        android:layout_marginLeft="10dp"
        android:layout_alignParentBottom="true"
        android:clipChildren="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </com.example.rh.artlive.live.GiftItemView>



        <com.example.rh.artlive.live.ChatListView
            android:id="@+id/chat_listview"
            android:layout_width="230dp"
            android:layout_height="152dp"
            android:layout_above="@+id/bottom_bar"
            android:divider="@null"
            android:listSelector="@android:color/transparent"
            android:scrollbars="none"
            android:transcriptMode="alwaysScroll"/>
        <fragment
            android:id="@+id/bottom_bar"
            android:name="com.example.rh.artlive.fragment.BottomPanelLiveFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            tools:layout="@layout/fragment_live_bottombar"/>

            <com.example.rh.artlive.live.HeartLayout
                android:id="@+id/heart_layout"
                android:layout_width="86dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="4dp"/>

    <LinearLayout
        android:visibility="gone"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_below="@+id/picure"
        android:id="@+id/layout_preferences"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal">

        <ToggleButton
            android:id="@+id/toggle_live_push"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/live_push"
            android:textOn="@string/live_stop"
        />
        <ToggleButton
            android:id="@+id/toggle_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/app_camera"
            android:textOn="@string/app_camera"/>

        <ToggleButton
            android:id="@+id/toggle_flash_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/toggle_switch_flash_on"
            android:textOn="@string/toggle_switch_flash_off"/>

        <ToggleButton
            android:id="@+id/btn_switch_beauty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/toggle_switch_beauty_on"
            android:textOn="@string/toggle_switch_beauty_off"/>
    </LinearLayout>

</RelativeLayout>
